# RSEND_path_planing

./: LICENSE  README.md  setup.bash  setup.sh  test_navigation.sh  test_slam.sh
catkin_ws/: add_markers.sh  home_service.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
catkin_ws/src/add_markers/: CMakeLists.txt  package.xml
catkin_ws/src/add_markers/src/: add_markers.cpp
catkin_ws/src/add_markers/srv/: UpdateMarker.srv
catkin_ws/src/my_robot/: package.xml
catkin_ws/src/my_robot/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml
catkin_ws/src/my_robot/launch/: localization.launch  mapping.launch  robot_description.launch  world.launch
catkin_ws/src/my_robot/maps/: map.pgm  map.yaml
catkin_ws/src/my_robot/rviz/: service_robot.rviz
catkin_ws/src/my_robot/urdf/: my_robot.gazebo  my_robot.xacro
catkin_ws/src/my_robot/worlds/: my_room.world
catkin_ws/src/pick_objects/: CMakeLists.txt  package.xml
catkin_ws/src/pick_objects/src/: pick_objects.cpp
